<resources>
    <string name="app_name">Vocaburise</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="auth_screen_title">Authorization</string>

    <string name="signUpScreenName">Name</string>
    <string name="signUpScreenNameEmptyError">Please enter a name</string>

    <string name="signInScreenLogin">Email</string>
    <string name="signInScreenPassword">Password</string>
    <string name="signInScreenForgotPassword">Forgot password?</string>
    <string name="signInScreenSignInButtonTitle">Sign In</string>
    <string name="signInScreenRegisterButtonTitle">Register</string>
    <string name="signInScreenEmailEmptyError">Please enter email</string>
    <string name="signInScreenPasswordEmptyError">Please enter password</string>

    <string name="mainScreenWelcomeMessage">Welcome back, %s!</string>
    <string name="mainScreenWordsNumber">You have %s words assigned for today</string>
    <string name="mainScreenStartLearning">Start learning!</string>

    <string name="errorUnknown">Something went wrong</string>
    <string name="done">Done!</string>
    <string name="no">no</string>
    <string name="save">Save</string>
    <string name="signOut">Sign out</string>
    <string name="settings">Settings</string>

    <string name="addWordsScreenTitle">Add word</string>
    <string name="addWordsScreenWord">Word</string>
    <string name="addWordsScreenTranslation">Translation</string>
    <string name="addWordScreenWordEmptyError">Please enter a word</string>
    <string name="addWordScreenTranslationEmptyError">Please enter translation</string>

</resources>
