<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.Gravity" />

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.masterofcode.vocaburise.screens.auth.signIn.SignInViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                app:errorText='@{vm.emailError}'>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/signInScreenLogin"
                    android:inputType="textEmailAddress"
                    android:text='@={vm.email}' />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorText='@{vm.passwordError}'>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signInScreenPassword"
                    android:inputType="textPassword"
                    android:text="@={vm.password}"
                    android:textAlignment="viewStart"
                    tools:ignore="LabelFor" />
            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:onClick='@{() -> vm.forgotPassword()}'
                android:text="@string/signInScreenForgotPassword"
                android:textAllCaps="false" />

            <Button
                style="Base.Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick='@{() -> vm.signIn()}'
                android:text="@string/signInScreenSignInButtonTitle"
                android:textColor="@color/white" />

            <Button
                style="Base.Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick='@{() -> vm.register()}'
                android:text="@string/signInScreenRegisterButtonTitle"
                android:textColor="@color/white"
                android:visibility="visible" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility='@{vm.progressBarVisible ? View.VISIBLE : View.GONE}'
            tools:visibility="gone">

            <include layout="@layout/view_loading_overlay" />
        </FrameLayout>
    </FrameLayout>
</layout>